fix(ProfileData): align 'apply' & 'reset' buttons in row

--- a/components/ProfileData/ProfileData.sass
+++ b/components/ProfileData/ProfileData.sass
@@ -192,13 +192,13 @@
     &__buttons
         height: min-content
         display: flex
-        flex-direction: column
+        flex-direction: row
+        gap: 10px
         justify-content: space-around
-        height: 100px
 
         &__submit-button
             height: 35px
-            width: 200px
+            width: 150px
             border: none
             border-radius: 10px
             background-color: #4daf7c
@@ -209,7 +209,7 @@
 
         &__reset-button
             height: 35px
-            width: 200px
+            width: 150px
             border: none
             border-radius: 10px
             background-color: #e64229
